--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="35dp"
         android:backgroundTint="#83BD75"
         android:fontFamily="@font/ralewayregular"
-        android:text="Login"
+        android:text="LOGIN"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
