20220929 - fix home, register

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,14 @@
     <EditText
         android:id="@+id/editEmail"
         android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="35dp"
+        android:layout_height="48dp"
         android:layout_gravity="center"
+        android:layout_marginTop="35dp"
         android:background="@drawable/edittextshape"
         android:fontFamily="@font/ralewayregular"
         android:hint="Email"
-        android:textSize="13dp"
         android:textAlignment="center"
+        android:textSize="13dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,15 +40,15 @@
     <EditText
         android:id="@+id/editPassword"
         android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="25dp"
+        android:layout_height="48dp"
         android:layout_gravity="center"
+        android:layout_marginTop="25dp"
         android:background="@drawable/edittextshape"
         android:fontFamily="@font/ralewayregular"
         android:hint="Password"
-        android:textSize="13dp"
         android:inputType="textPassword"
         android:textAlignment="center"
+        android:textSize="13dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +93,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:fontFamily="@font/ralewayregular"
+            android:minHeight="48dp"
             android:text="Register now!"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
