20221018 - perbaiki method login regist, add image role laundry, kosmetik nav menu dan logout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,12 +55,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent=".8" />
 
+    <ProgressBar
+        android:id="@+id/progressBarLogin"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"/>
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="35dp"
         android:backgroundTint="#83BD75"
         android:fontFamily="@font/ralewayregular"
         android:text="LOGIN"
