--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registrasi"
+    android:background="#E9EFC0"
     android:orientation="vertical"
-    android:background="#E9EFC0">
+    tools:context=".Registrasi">
 
     <!--    <TextView
         android:id="@+id/rgsfullName"
@@ -94,6 +94,13 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/belakangregistrasi">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
         <EditText
             android:id="@+id/editrgsfullName"
             android:layout_width="300dp"
@@ -173,21 +180,21 @@
 
         <Spinner
             android:id="@+id/fidgetSpinner"
-            android:paddingLeft="5dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="350dp"
             android:layout_width="150dp"
             android:layout_height="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="350dp"
             android:background="@drawable/spinnerrgsshape"
-            android:spinnerMode="dropdown"/>
+            android:paddingLeft="5dp"
+            android:spinnerMode="dropdown" />
     </FrameLayout>
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:backgroundTint="#83BD75"
         android:fontFamily="@font/ralewayregular"
         android:text="Register"
@@ -205,9 +212,12 @@
             android:id="@+id/registerStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
             app:srcCompat="@drawable/register_style" />
+
     </RelativeLayout>
 
 </LinearLayout>
