--- a/app/src/main/res/drawable/white_btn_background.xml
+++ b/app/src/main/res/drawable/white_btn_background.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="10dp"/>
-        <solid android:color="#ffff"/>
+        <solid android:color="#EFDAD7"/>
     </shape>
 </item>
 </selector>
