--- a/app/src/main/res/layout/activity_homes.xml
+++ b/app/src/main/res/layout/activity_homes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E9EFC0">
+    android:background="#516091">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayoutTop"
@@ -86,7 +86,8 @@
                         android:text="Cari Laundry"
                         android:textAlignment="center"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -130,7 +131,8 @@
                         android:text="Cari Laundry"
                         android:textAlignment="center"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -174,7 +176,8 @@
                         android:text="Cari Laundry"
                         android:textAlignment="center"
                         android:textSize="15dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
             </TableRow>
 
