--- a/app/src/main/res/layout/laundrylist_home.xml
+++ b/app/src/main/res/layout/laundrylist_home.xml
@@ -4,27 +4,30 @@
     android:layout_height="120dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="#1572A1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imgLogo"-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="100dp"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            android:src="@drawable/ic_profile_icon"/>-->
+        <ImageView
+            android:id="@+id/imgLogo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_profile_icon"/>
 
         <TextView
             android:id="@+id/txtNamaLaundry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="16dp"
             android:text="NamaLaundry"
-            android:textSize="25dp"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,11 +36,13 @@
             android:id="@+id/txtDescriptionLaundry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="12dp"
             android:text="DeskripsiLaundry"
-            android:textSize="17dp"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txtNamaLaundry" />
+            app:layout_constraintTop_toBottomOf="@+id/txtNamaLaundry" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
