--- a/app/src/main/res/layout/laundrylist_home.xml
+++ b/app/src/main/res/layout/laundrylist_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="120dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="6dp"
     android:layout_margin="10dp"
     app:cardBackgroundColor="#1572A1">
 
@@ -12,22 +12,25 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:clipToOutline="true"
+            android:background="@drawable/roundbackground"
             android:id="@+id/imgLogo"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:src="@drawable/ic_profile_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_profile_icon"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtNamaLaundry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="112dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="28dp"
             android:text="NamaLaundry"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="23dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,11 +39,11 @@
             android:id="@+id/txtDescriptionLaundry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="112dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="15dp"
             android:text="DeskripsiLaundry"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtNamaLaundry" />
     </androidx.constraintlayout.widget.ConstraintLayout>
