--- a/app/src/main/res/layout/laundrylist_home.xml
+++ b/app/src/main/res/layout/laundrylist_home.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="6dp"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="#1572A1">
+    app:cardBackgroundColor="#1572A1"
+    android:id="@+id/parentLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
