--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,66 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/home_layout"
-    android:background="#1572A1">
+    android:id="@+id/home_layout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/constraintLayoutMain">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayoutTop"
+        <TextView
+            android:background="#1572A1"
+            android:paddingTop="20dp"
+            android:paddingLeft="12dp"
+            android:id="@+id/txtNamaUser"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="wrap_content"
+            android:text="Hi, Alif. \nJangan lupa join live yea"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"/>
 
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="16dp"-->
-<!--                app:cardCornerRadius="6dp"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent">-->
-
-<!--                <com.smarteist.autoimageslider.SliderView-->
-<!--                    android:id="@+id/imageSlider"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="300dp"-->
-<!--                    app:sliderAnimationDuration="600"-->
-<!--                    app:sliderAutoCycleDirection="back_and_forth"-->
-<!--                    app:sliderAutoCycleEnabled="true"-->
-<!--                    app:sliderIndicatorAnimationDuration="600"-->
-<!--                    app:sliderIndicatorGravity="center_horizontal|bottom"-->
-<!--                    app:sliderIndicatorMargin="15dp"-->
-<!--                    app:sliderIndicatorOrientation="horizontal"-->
-<!--                    app:sliderIndicatorPadding="3dp"-->
-<!--                    app:sliderIndicatorRadius="2dp"-->
-<!--                    app:sliderIndicatorSelectedColor="#5A5A5A"-->
-<!--                    app:sliderIndicatorUnselectedColor="#FFF"-->
-<!--                    app:sliderScrollTimeInSec="1"-->
-<!--                    app:sliderStartAutoCycle="true" />-->
-
-<!--            </androidx.cardview.widget.CardView>-->
-
-<!--            <ViewFlipper-->
-<!--                android:id="@+id/vFlipper"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_margin="16dp"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"/>-->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayoutTop"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/belakangmain"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtNamaUser">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
-                android:layout_width="match_parent"
-                android:layout_height="190dp"
+                android:layout_width="360dp"
+                android:layout_height="180dp"
                 app:cardCornerRadius="20dp"
                 app:cardUseCompatPadding="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,36 +56,22 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
+                </com.denzcoskun.imageslider.ImageSlider>
             </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/txtServices"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="178dp"
-                android:paddingTop="17dp"
-                android:text="Services"
-                android:textColor="@color/white"
-                android:textSize="22dp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/cardView"
-                app:layout_constraintVertical_bias="0.0" />
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/constraintLayoutMid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/lightblue"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
             app:cardBackgroundColor="@color/lightblue"
             app:cardCornerRadius="20dp"
+            android:elevation="50dp"
             app:layout_constraintCircleRadius="@android:dimen/app_icon_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,13 +91,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
+                        android:paddingRight="20dp"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:background="@drawable/white_btn_background">
+                            android:layout_height="70dp">
 
                             <ImageView
                                 android:id="@+id/img1"
@@ -155,19 +118,18 @@
                                 app:layout_constraintEnd_toEndOf="@+id/img1"
                                 app:layout_constraintStart_toStartOf="@+id/img1"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/btn_1" />
+                                app:srcCompat="@drawable/lightning" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <TextView
                             android:id="@+id/textViewCart"
-                            android:layout_width="match_parent"
+                            android:layout_width="60dp"
                             android:layout_height="wrap_content"
                             android:text="Cuci Kilat"
                             android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="16dp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/black"
+                            android:textSize="15dp"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -175,13 +137,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
+                        android:paddingRight="20dp"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:background="@drawable/white_btn_background">
+                            android:layout_height="70dp">
 
                             <ImageView
                                 android:id="@+id/img2"
@@ -202,7 +164,7 @@
                                 app:layout_constraintEnd_toEndOf="@+id/img2"
                                 app:layout_constraintStart_toStartOf="@+id/img2"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/btn_1" />
+                                app:srcCompat="@drawable/pickup" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -212,30 +174,22 @@
                             android:layout_height="match_parent"
                             android:text="Pickup Laundry"
                             android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="15dp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/black"
+                            android:textSize="14dp"/>
                     </LinearLayout>
 
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
-
                     <LinearLayout
-                        android:layout_width="150dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
+                        android:paddingRight="20dp"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:background="@drawable/white_btn_background">
+                            android:layout_height="70dp">
 
                             <ImageView
                                 android:id="@+id/img3"
@@ -256,7 +210,7 @@
                                 app:layout_constraintEnd_toEndOf="@+id/img3"
                                 app:layout_constraintStart_toStartOf="@+id/img3"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/btn_1" />
+                                app:srcCompat="@drawable/clothes" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -266,13 +220,12 @@
                             android:layout_height="wrap_content"
                             android:text="Cari Satuan"
                             android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="15dp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/black"
+                            android:textSize="15dp"/>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="150dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
@@ -281,8 +234,7 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:background="@drawable/white_btn_background">
+                            android:layout_height="70dp">
 
                             <ImageView
                                 android:id="@+id/img4"
@@ -303,7 +255,7 @@
                                 app:layout_constraintEnd_toEndOf="@+id/img4"
                                 app:layout_constraintStart_toStartOf="@+id/img4"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/btn_1" />
+                                app:srcCompat="@drawable/weight" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -313,9 +265,8 @@
                             android:layout_height="wrap_content"
                             android:text="Cari Kiloan"
                             android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="15dp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/black"
+                            android:textSize="15dp"/>
                     </LinearLayout>
 
                 </TableRow>
@@ -339,7 +290,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Featured Laundry"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:paddingBottom="10px"
@@ -355,7 +306,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lihat Semua Laundry>>"
-                android:textColor="#EFDAD7"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.95"
@@ -364,7 +315,10 @@
                 />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:background="@drawable/background_recyler_home"
                 android:layout_marginTop="85px"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/recyclerLaundry"/>
