--- a/app/src/main/res/layout/activity_home_laundry_list.xml
+++ b/app/src/main/res/layout/activity_home_laundry_list.xml
@@ -7,10 +7,60 @@
     android:background="#1572A1"
     tools:context=".HomeLaundryList">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="45px"
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/constraintSearch"-->
+<!--        android:background="@color/black"-->
+<!--        android:layout_marginTop="36px"-->
+<!--        android:layout_marginLeft="36px"-->
+<!--        android:layout_marginRight="36px"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="120dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <AutoCompleteTextView-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:id="@+id/txtSearch"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:background="@color/white"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--    <ListView-->
+<!--        android:background="@color/grey_font"-->
+<!--        android:id="@+id/listLaundry"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="100dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/constraintSearch" />-->
+
+    <SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerLaundry"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="44px"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/belakangregistrasi"
+        android:queryHint="Search Here...."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerLaundry"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="44px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
