--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -2,8 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/itemProfile"
+        android:id="@+id/itemParent"
         android:icon="@drawable/ic_profile_icon"
         android:title="Profile"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom">
+        <menu xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
+            <item
+                android:id="@+id/itemProfile"
+                android:title="Profile"
+                app:showAsAction="never"/>
+            <item
+                android:id="@+id/itemLogout"
+                android:title="Logout"
+                app:showAsAction="never"/>
+        </menu>
+    </item>
 </menu>
