--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -155,15 +155,13 @@
             android:layout_marginTop="30dp"
             android:paddingLeft="5dp"
             android:background="@drawable/edittextrgsshape"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16dp"
             android:text="asdasdas"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtDescs" />
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
